# chatvault

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  schema.md
docs/recipes/: contacts.md  digest.md  queries.md
scripts/: README.md  daily.sh
scripts/service/chatvault-mirror/: run
scripts/service/chatvault-mirror/log/: run
src/chatvault/: __init__.py  cli.py  config.py  contacts.py  db.py  decrypt.py  identities.py  media_mirror.py  pipeline.py  vcard.py
src/chatvault/exports/: __init__.py  digest.py
src/chatvault/extractors/: __init__.py  bot_messages.py  calls.py  chats.py  communities.py  edits.py  group_members.py  identities.py  messages.py  newsletter.py  polls.py  reactions.py  status_archive.py  status_posts.py  system_events.py  templates.py  transcriptions.py  vcards.py
src/chatvault/migrations/: 001_init.sql
src/chatvault/queries/: __init__.py  chats.py  links.py  receipts.py  search.py  stats.py  status.py  timeline.py
tests/: conftest.py  test_contacts.py  test_db.py  test_extractors_messages.py  test_identities.py  test_pipeline_smoke.py  test_queries_timeline.py  test_vcard.py
tests/extractors/: test_status_archive.py
